--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </section>
 
     <footer>
-        <p>Workshop outcomes will be documented at <a href="https://preserving-attention.github.io" style="color: #3498db;">https://preserving-attention.github.io</a></p>
+        <p>Workshop outcomes will be documented at <a href="https://axlab-uofc.github.io/preserving-attention/" style="color: #3498db;">https://axlab-uofc.github.io/preserving-attention/</a></p>
     </footer>
 </body>
 </html>
