--- a/index.html
+++ b/index.html
@@ -121,13 +121,21 @@
         <h1>Attention-Preserving Tangible Interfaces</h1>
         <p style="font-size: 1.1em; color: #555;">Using Physicality and Materiality to Preserve Attention in the Home</p>
     </header>
-
+    <section>
+      <img src="banner.jpg" style="max-width:700px;" alt="" />
+    </section>
+    <section>
+      <a style="margin-right:auto;font-size:24px;" href="https://cvent.me/z4bRBa">Register Here!</a>
+    </section>
+    <section>
+      Read our workshop paper <a href="paper.pdf">here.</a>
+    </section>
     <section>
         <h2>Workshop Details</h2>
         <div class="meta">
             <div class="meta-item">
                 <strong>Conference</strong>
-                TEI '26 - 20th Anniversary Conference on Tangible, Embedded, and Embodied Interaction
+                TEI 26 - 20th Anniversary Conference on Tangible, Embedded, and Embodied Interaction
             </div>
             <div class="meta-item">
                 <strong>Date</strong>
