--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="meta-item">
                 <strong>Date</strong>
-                March 8-11, 2026
+                March 8, 2026
             </div>
             <div class="meta-item">
                 <strong>Location</strong>
